--- a/wayne_test.css
+++ b/wayne_test.css
@@ -1,13 +1,13 @@
 body{
     margin: 0 auto;
     font-family: Georgia, Palatino, serif;
-    color: #444444;
+    color: #FF00FF;
     line-height: 1;
     max-width: 960px;
     padding: 30px;
 }
 h1, h2, h3, h4 {
-    color: #111111;
+    color: #FF00FF;
     font-weight: 400;
 }
 h1, h2, h3, h4, h5, p {
@@ -31,7 +31,7 @@ h5 {
     font-size: 18px;
 }
 a {
-    color: #0099ff;
+    color: #FF00FF;
     margin: 0;
     padding: 0;
     vertical-align: baseline;
